--- a/.github/workflows/TestingJob.yml
+++ b/.github/workflows/TestingJob.yml
@@ -2,9 +2,9 @@ name: Unit Test
 
 on:
   push:
-    branches: "main"
+    branches: ["master","main"]
   pull_request:
-    branches: "main"
+    branches: ["master","main"]
 
 jobs:
   tests: # The jobs name needs to be in the branch rules
